--- a/style.css
+++ b/style.css
@@ -39,16 +39,26 @@ h1 {
 }
 
 input[type="text"], button {
-  padding: 10px 15px; /* More padding */
+  padding: 10px 15px;
   margin: 10px;
-  border-radius: 8px; /* Softer curve for a modern feel */
-  border: 1px solid #ddd; /* Subtle border */
-  font-family: inherit; /* Inherit font from the body */
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  font-family: inherit;
 }
 
 #result {
   margin-top: 20px;
-  font-size: 20px;
+  font-size: 18px;
+  white-space: pre-wrap;
+  height: 50px;
+}
+
+.correct-result { 
+    color: #256137;  /* Dark forest green */
+}
+
+.incorrect-result {
+    color: #8b0000; /* Deep maroon */
 }
 
 /* Increased spacing in results */
@@ -64,18 +74,18 @@ input[type="text"], button {
   left: 50%;
   transform: translate(-50%, -50%); 
   background-color: white;
-  padding: 30px; /* More padding for visual comfort */
-  border-radius: 15px; /* More rounded corners */
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); /* Stronger shadow */
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
 #timer, #score {
   font-weight: bold;
-  font-size: 1.2em;  /* Slightly increased text size */
+  font-size: 1.4em;
 }
 
 #checkingText { 
-  font-size: 20px; 
+  font-size: 15px; 
 }
 
 @keyframes loadingDots { /* Same animation as before */
