--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     background-image: url('assets/leather_1.png'); 
     background-repeat: repeat; 
     background-color: #f8f8f8; 
+    color: #581845; 
 }
 
 #cream-overlay {
@@ -117,6 +118,8 @@ h1 img {
 h1 {
   font-size: 2.5em;
   margin-bottom: 20px;
+  color: #581845; 
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.3); 
 }
 
 h2 {
