--- a/style.css
+++ b/style.css
@@ -185,6 +185,20 @@ input[type="text"], button {
   top: -10px;
 }
 
+#attribution {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  font-size: 15px;
+  color: #666;
+  z-index: 200;
+}
+
+#attribution a {
+  color: #581845;
+  text-decoration: none;
+}
+
 #checkingText { 
   font-size: 15px; 
 }
