--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
 body { 
     font-family: 'Garamond', serif;
     text-align: center;
-    margin: 40px;
+    margin: 15px;
     background-image: url('assets/leather_1.png'); 
     background-repeat: repeat; 
     background-color: #f8f8f8; 
@@ -71,10 +71,10 @@ body {
   left: 50%;
   transform: translate(-50%, -50%); 
   background-color: #fffaf0; /* Soft cream color */
-  background-color: rgba(255, 250, 240, 1);    padding: 30px;  padding: 30px;
+  background-color: rgba(255, 250, 240, 1);    padding: 30px;
   border-radius: 15px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  max-height: 300px; 
+  max-height: 80vh;
   overflow-y: auto; 
 }
 
@@ -106,13 +106,6 @@ ol {
 .title-image-container h1 { 
   font-family: 'angelinaregular', cursive; /* Cursive as fallback  */
   letter-spacing: 3px; 
-}
-
-h1 img {
-    max-width: 100%; 
-    height: auto;  
-    margin-bottom: 20px;
-    box-shadow: 0 0 20px #ffcccc; 
 }
 
 h1 {
@@ -154,12 +147,15 @@ input[type="text"], button {
   font-family: inherit;
 }
 
-#result {
+#result { 
   margin-top: 5px;
-  margin-bottom: 30px;
+  margin-bottom: 30px; 
   font-size: 16px;
   white-space: pre-wrap;
-  height: 50px;
+}
+
+#result a {
+  color: #581845; 
 }
 
 #bestMatch { 
@@ -167,12 +163,11 @@ input[type="text"], button {
   font-size: 16px;
   white-space: pre-wrap;
   height: 50px;
-  color: #666; /* Text within #bestMatch will be #666 */
+  color: #666;
 }
 
 #bestMatch a {
   color: #581845; 
-  text-decoration: none;
 }
 
 .correct-result { 
@@ -183,7 +178,6 @@ input[type="text"], button {
     color: #8b0000; /* Deep maroon */
 }
 
-/* Increased spacing in results */
 #womenNamed, #invalidGuesses {
   white-space: pre-wrap;
   margin-bottom: 15px; 
@@ -216,3 +210,18 @@ input[type="text"], button {
 #checkingText { 
   font-size: 15px; 
 }
+
+#image-result {
+  display: flex; 
+  flex-direction: column; 
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+#womanImage {
+  max-width: 250px; 
+  max-height: 200px; 
+  margin-bottom: 15px; 
+  border: 5px solid #581845;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); 
+} 
