--- a/style.css
+++ b/style.css
@@ -223,6 +223,6 @@ input[type="text"], button {
   max-width: 250px; 
   max-height: 200px; 
   margin-bottom: 15px; 
-  border: 5px solid #581845;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); 
+  border-radius: 80px;
 } 
