--- a/style.css
+++ b/style.css
@@ -146,10 +146,14 @@ input[type="text"], button {
   border-radius: 8px;
   border: 1px solid #ddd;
   font-family: inherit;
+  box-shadow: 
+     5px 5px 10px rgba(0, 0, 0, 0.3),
+     0 0 20px rgba(88, 24, 69, 0.6); /* Pink glow */
+    
 }
 
 #result { 
-  margin-top: 5px;
+  margin-top: 10px;
   margin-bottom: 30px; 
   font-size: 16px;
   white-space: pre-wrap;
@@ -234,4 +238,7 @@ input[type="text"], button {
   margin-bottom: 15px; 
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); 
   border-radius: 80px;
+  box-shadow: 
+     5px 5px 10px rgba(0, 0, 0, 0.3),
+     0 0 60px rgba(88, 24, 69, 0.6); /* Pink glow */
 } 
