--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); 
-  background-color: #fffaf0; /* Soft cream color */
-  background-color: rgba(255, 250, 240, 1);    padding: 30px;
+  background-color: rgba(255, 250, 240, 0.8);
+  padding: 30px;
   border-radius: 15px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1), 0 0 60px rgba(88, 24, 69, 0.6); /* Pink glow */ 
   z-index: 100;
